# trafficflowviz

./: .clang-format  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CMakeLists.txt  KEYBINDINGS.md  Product Requirments Document.md  README.md  build.sh  clean.sh  fix_includes.sh  imgui.ini  schedule.ics  update_includes.sh
bindings/: CMakeLists.txt  py_module.cpp
include/: Config.hpp.in
include/alerts/: AlertManager.hpp
include/core/: Engine.hpp  Event.hpp  Layer.hpp  LayerStack.hpp  RoadNetwork.hpp  Simulation.hpp  TrafficEntity.hpp  Window.hpp
include/core/Events/: AppEvent.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp  WindowResizeEvent.hpp
include/data/: CSVLoader.hpp
include/network/: LiveFeed.hpp
include/platform/SDL/: SDLWindow.hpp
include/recording/: RecordingManager.hpp
include/rendering/: HeatmapRenderer.hpp  ImGuiRenderer.hpp  Renderer.hpp  SceneRenderer.hpp
include/rendering/layers/: HeatmapLayer.hpp  ImGuiLayer.hpp  SimulationLayer.hpp
include/utils/: LoggingManager.hpp
scripts/: rush_hour.py
scripts/simulations/: rush_hour.py
src/: CMakeLists.txt  CSVLoader.cpp  CSVLoader.hpp  Engine.cpp  Engine.hpp  LiveFeed.cpp  LiveFeed.hpp  Renderer.cpp  Renderer.hpp  RoadNetwork.cpp  RoadNetwork.hpp  SceneRenderer.cpp  SceneRenderer.hpp  Simulation.cpp  Simulation.hpp  TrafficEntity.hpp  main.cpp
src/alerts/: AlertManager.cpp
src/core/: Engine.cpp  RoadNetwork.cpp  Simulation.cpp
src/data/: CSVLoader.cpp
src/network/: LiveFeed.cpp
src/recording/: RecordingManager.cpp
src/rendering/: HeatmapRenderer.cpp  ImGuiRenderer.cpp  LayerStack.cpp  Renderer.cpp  SceneRenderer.cpp
src/rendering/layers/: HeatmapLayer.cpp  ImGuiLayer.cpp  SimulationLayer.cpp
src/utils/: LoggingManager.cpp
